# leist_converter

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
leist_converter/: __init__.py  convert.py
leist_converter/resources/: word_mappings.json
resources/: word_mappings.json
