[metadata]
name = leist_converter
version = 0.1.0
author = Dein Name
description = Eine Bibliothek zum Konvertieren von Strings
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8

[options.package_data]
leist_converter = 
    resources/*.json

[options.extras_require]
dev =
    pytest

[build-system]
requires = ["setuptools", "wheel"]
build-backend = setuptools.build_meta
